--- a/Job Portal System/Job Portal System.csproj
+++ b/Job Portal System/Job Portal System.csproj
@@ -27,6 +27,7 @@
   <ItemGroup>
     <Folder Include="Data\Migrations\" />
     <Folder Include="Files\Evaluations\" />
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
